Restore JDK 8 compatibility in the reflective class-loading tests
ClassLoadingTestDiagnosticEvent used Map.of(), which is unavailable on JDK 8;
use Collections.emptyMap() instead.